--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">BluetoothDemo</string>
+    <string name="app_name">Bluetooth Scan</string>
+    <string name="no_bt_button">可惜, 好吧</string>
 </resources>
